fixed overlap and sizing issues on mobile and fullscreen

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@ body, html {
 
 .app {
     padding: 0;
-    display: flex;
-    flex-direction: column;
 }
 
 .btn {
@@ -19,12 +17,16 @@ body, html {
     margin: 0;
 }
 
+.card-text {
+    width: 100%;
+    height: 100%;
+}
+
 .back-to-top {
     box-shadow: 0.2rem 0.2rem 0.5rem #888888;
     border-radius: 0.25rem;
     width: 7rem;
     height: 2.5rem;
-    padding: 5rem;
 }
 
 .holder-div {
@@ -44,14 +46,6 @@ body, html {
     flex-direction: row;
     height: 100vh;
     margin: 0.25rem;
-}
-
-.section1 {
-    align-self: flex-start;
-    margin: 0.5rem;
-    box-shadow: 0.2rem 0.2rem 0.5rem #888888;
-    border-radius: 0.25rem;
-    padding: 4rem;
 }
 
 .holder-div {
@@ -98,6 +92,7 @@ body, html {
 
 .image {
     height: 22rem;
+    min-height: 22rem;
     min-width: 22rem;
     width: 22rem;
     box-shadow: 0.2rem 0.2rem 0.5rem #888888;
@@ -113,13 +108,10 @@ body, html {
     .section-container {
         display: flex;
         flex-direction: column;
-    }
-
-    .section1 {
-        order: 1;
+        height: 150vh;
     }
 
     .image {
-        order: 2;
+        align-self: center;
     }
 }
